rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__primitive.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (primitive), \"1;\")"
---
[
    ExprStmt(
        Atom(
            Literal(
                Number(
                    1,
                ),
            ),
        ),
    ),
]
