rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__repeat_loop.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (repeat_loop), \"repeat a; until (b);\")"
---
[
    Repeat(
        Repeat {
            block: Block {
                items: [
                    ExprStmt(
                        Atom(
                            Ident(
                                Ident(
                                    "a",
                                ),
                            ),
                        ),
                    ),
                ],
            },
            condition: Atom(
                Ident(
                    Ident(
                        "b",
                    ),
                ),
            ),
        },
    ),
]
