rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__return_assign.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (return_assign), \"a++;\")"
---
[
    ExprStmt(
        Unary(
            Unary {
                op: Postfix(
                    PlusPlus,
                ),
                rhs: Atom(
                    Ident(
                        Ident(
                            "a",
                        ),
                    ),
                ),
            },
        ),
    ),
]
