rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__return_stmt.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (return_stmt), \"function a(b) { return 0; }\")"
---
[
    FnDecl(
        FnDecl {
            fn_name: Ident(
                "a",
            ),
            args: CommaSeparated {
                items: [
                    Ident(
                        "b",
                    ),
                ],
                delimiter: Paren,
            },
            block: Block {
                stmts: [
                    Return(
                        Return {
                            expr: Atom(
                                Literal(
                                    Number(
                                        0,
                                    ),
                                ),
                            ),
                        },
                    ),
                ],
            },
        },
    ),
]
