rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__sub.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (sub), \"a - 1;\")"
---
[
    Stmt(
        ExprStmt(
            Binary(
                Binary {
                    lhs: PlaceExpr(
                        Ident(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                    op: Minus,
                    rhs: Literal(
                        Number(
                            1,
                        ),
                    ),
                },
            ),
        ),
    ),
]
