rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__unary_operators.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (unary_operators),\n\"\n    -a;\n    !a;\n    - - -a;\n    - - !a;\n    ! ! !a;\n    \")"
---
[
    Stmt(
        ExprStmt(
            Unary(
                Unary {
                    op: Prefix(
                        Minus,
                    ),
                    rhs: PlaceExpr(
                        Ident(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                },
            ),
        ),
    ),
    Stmt(
        ExprStmt(
            Unary(
                Unary {
                    op: Prefix(
                        Bang,
                    ),
                    rhs: PlaceExpr(
                        Ident(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                },
            ),
        ),
    ),
    Stmt(
        ExprStmt(
            Unary(
                Unary {
                    op: Prefix(
                        Minus,
                    ),
                    rhs: Unary(
                        Unary {
                            op: Prefix(
                                Minus,
                            ),
                            rhs: Unary(
                                Unary {
                                    op: Prefix(
                                        Minus,
                                    ),
                                    rhs: PlaceExpr(
                                        Ident(
                                            Ident(
                                                "a",
                                            ),
                                        ),
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ),
    ),
    Stmt(
        ExprStmt(
            Unary(
                Unary {
                    op: Prefix(
                        Minus,
                    ),
                    rhs: Unary(
                        Unary {
                            op: Prefix(
                                Minus,
                            ),
                            rhs: Unary(
                                Unary {
                                    op: Prefix(
                                        Bang,
                                    ),
                                    rhs: PlaceExpr(
                                        Ident(
                                            Ident(
                                                "a",
                                            ),
                                        ),
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ),
    ),
    Stmt(
        ExprStmt(
            Unary(
                Unary {
                    op: Prefix(
                        Bang,
                    ),
                    rhs: Unary(
                        Unary {
                            op: Prefix(
                                Bang,
                            ),
                            rhs: Unary(
                                Unary {
                                    op: Prefix(
                                        Bang,
                                    ),
                                    rhs: PlaceExpr(
                                        Ident(
                                            Ident(
                                                "a",
                                            ),
                                        ),
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ),
    ),
]
