rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__unary_postfix_operators.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (unary_postfix_operators),\n\"\n    a++;\n    a--;\n    a-- --;\n    a++ ++;\n    ++a++;\n    \")"
---
[
    Stmt(
        ExprStmt(
            Unary(
                Unary {
                    op: Postfix(
                        PlusPlus,
                    ),
                    rhs: PlaceExpr(
                        Ident(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                },
            ),
        ),
    ),
    Stmt(
        ExprStmt(
            Unary(
                Unary {
                    op: Postfix(
                        MinusMinus,
                    ),
                    rhs: PlaceExpr(
                        Ident(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                },
            ),
        ),
    ),
    Stmt(
        ExprStmt(
            Unary(
                Unary {
                    op: Postfix(
                        MinusMinus,
                    ),
                    rhs: Unary(
                        Unary {
                            op: Postfix(
                                MinusMinus,
                            ),
                            rhs: PlaceExpr(
                                Ident(
                                    Ident(
                                        "a",
                                    ),
                                ),
                            ),
                        },
                    ),
                },
            ),
        ),
    ),
    Stmt(
        ExprStmt(
            Unary(
                Unary {
                    op: Postfix(
                        PlusPlus,
                    ),
                    rhs: Unary(
                        Unary {
                            op: Postfix(
                                PlusPlus,
                            ),
                            rhs: PlaceExpr(
                                Ident(
                                    Ident(
                                        "a",
                                    ),
                                ),
                            ),
                        },
                    ),
                },
            ),
        ),
    ),
    Stmt(
        ExprStmt(
            Unary(
                Unary {
                    op: Prefix(
                        PlusPlus,
                    ),
                    rhs: Unary(
                        Unary {
                            op: Postfix(
                                PlusPlus,
                            ),
                            rhs: PlaceExpr(
                                Ident(
                                    Ident(
                                        "a",
                                    ),
                                ),
                            ),
                        },
                    ),
                },
            ),
        ),
    ),
]
